--- a/package.json
+++ b/package.json
@@ -26,8 +26,13 @@
     "bcrypt": "^0.8.5",
     "body-parser": "^1.14.1",
     "cors": "^2.7.1",
+    "debug": "^2.2.0",
     "express": "^4.13.3",
     "jsonwebtoken": "^5.4.1",
     "lodash": "^3.10.1"
+  },
+  "devDependencies": {
+    "mocha": "^2.3.3",
+    "supertest": "^1.1.0"
   }
 }
