--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "ajv": "^1.4.8",
     "body-parser": "^1.14.1",
+    "connect-nocache": "astromo/connect-nocache#1.1.1",
     "cors": "^2.7.1",
     "debug": "^2.2.0",
     "express": "^4.13.3",
